Adding a requirements file as failsafe, added setuptools to library for brand new Python VENV as well

--- a/Tyler_Hayes_CS634_Notebook.ipynb
+++ b/Tyler_Hayes_CS634_Notebook.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "id": "3bceccd2",
    "metadata": {},
    "outputs": [
@@ -19,42 +19,42 @@
      "output_type": "stream",
      "text": [
       "Requirement already satisfied: tensorflow==2.16.2 in ./venv/lib/python3.10/site-packages (2.16.2)\n",
-      "Requirement already satisfied: libclang>=13.0.0 in ./venv/lib/python3.10/site-packages (from tensorflow==2.16.2) (18.1.1)\n",
-      "Requirement already satisfied: six>=1.12.0 in ./venv/lib/python3.10/site-packages (from tensorflow==2.16.2) (1.16.0)\n",
-      "Requirement already satisfied: ml-dtypes~=0.3.1 in ./venv/lib/python3.10/site-packages (from tensorflow==2.16.2) (0.3.2)\n",
-      "Requirement already satisfied: opt-einsum>=2.3.2 in ./venv/lib/python3.10/site-packages (from tensorflow==2.16.2) (3.3.0)\n",
-      "Requirement already satisfied: requests<3,>=2.21.0 in ./venv/lib/python3.10/site-packages (from tensorflow==2.16.2) (2.32.3)\n",
-      "Requirement already satisfied: astunparse>=1.6.0 in ./venv/lib/python3.10/site-packages (from tensorflow==2.16.2) (1.6.3)\n",
       "Requirement already satisfied: setuptools in ./venv/lib/python3.10/site-packages (from tensorflow==2.16.2) (59.6.0)\n",
-      "Requirement already satisfied: keras>=3.0.0 in ./venv/lib/python3.10/site-packages (from tensorflow==2.16.2) (3.4.1)\n",
-      "Requirement already satisfied: wrapt>=1.11.0 in ./venv/lib/python3.10/site-packages (from tensorflow==2.16.2) (1.16.0)\n",
-      "Requirement already satisfied: grpcio<2.0,>=1.24.3 in ./venv/lib/python3.10/site-packages (from tensorflow==2.16.2) (1.64.1)\n",
-      "Requirement already satisfied: gast!=0.5.0,!=0.5.1,!=0.5.2,>=0.2.1 in ./venv/lib/python3.10/site-packages (from tensorflow==2.16.2) (0.6.0)\n",
-      "Requirement already satisfied: typing-extensions>=3.6.6 in ./venv/lib/python3.10/site-packages (from tensorflow==2.16.2) (4.12.2)\n",
-      "Requirement already satisfied: google-pasta>=0.1.1 in ./venv/lib/python3.10/site-packages (from tensorflow==2.16.2) (0.2.0)\n",
-      "Requirement already satisfied: tensorflow-io-gcs-filesystem>=0.23.1 in ./venv/lib/python3.10/site-packages (from tensorflow==2.16.2) (0.37.1)\n",
-      "Requirement already satisfied: numpy<2.0.0,>=1.23.5 in ./venv/lib/python3.10/site-packages (from tensorflow==2.16.2) (1.26.4)\n",
-      "Requirement already satisfied: flatbuffers>=23.5.26 in ./venv/lib/python3.10/site-packages (from tensorflow==2.16.2) (24.3.25)\n",
-      "Requirement already satisfied: absl-py>=1.0.0 in ./venv/lib/python3.10/site-packages (from tensorflow==2.16.2) (2.1.0)\n",
-      "Requirement already satisfied: h5py>=3.10.0 in ./venv/lib/python3.10/site-packages (from tensorflow==2.16.2) (3.11.0)\n",
       "Requirement already satisfied: tensorboard<2.17,>=2.16 in ./venv/lib/python3.10/site-packages (from tensorflow==2.16.2) (2.16.2)\n",
+      "Requirement already satisfied: gast!=0.5.0,!=0.5.1,!=0.5.2,>=0.2.1 in ./venv/lib/python3.10/site-packages (from tensorflow==2.16.2) (0.6.0)\n",
       "Requirement already satisfied: termcolor>=1.1.0 in ./venv/lib/python3.10/site-packages (from tensorflow==2.16.2) (2.4.0)\n",
-      "Requirement already satisfied: protobuf!=4.21.0,!=4.21.1,!=4.21.2,!=4.21.3,!=4.21.4,!=4.21.5,<5.0.0dev,>=3.20.3 in ./venv/lib/python3.10/site-packages (from tensorflow==2.16.2) (4.25.3)\n",
+      "Requirement already satisfied: google-pasta>=0.1.1 in ./venv/lib/python3.10/site-packages (from tensorflow==2.16.2) (0.2.0)\n",
+      "Requirement already satisfied: six>=1.12.0 in ./venv/lib/python3.10/site-packages (from tensorflow==2.16.2) (1.16.0)\n",
+      "Requirement already satisfied: libclang>=13.0.0 in ./venv/lib/python3.10/site-packages (from tensorflow==2.16.2) (18.1.1)\n",
+      "Requirement already satisfied: tensorflow-io-gcs-filesystem>=0.23.1 in ./venv/lib/python3.10/site-packages (from tensorflow==2.16.2) (0.37.1)\n",
+      "Requirement already satisfied: opt-einsum>=2.3.2 in ./venv/lib/python3.10/site-packages (from tensorflow==2.16.2) (3.3.0)\n",
       "Requirement already satisfied: packaging in ./venv/lib/python3.10/site-packages (from tensorflow==2.16.2) (24.1)\n",
+      "Requirement already satisfied: wrapt>=1.11.0 in ./venv/lib/python3.10/site-packages (from tensorflow==2.16.2) (1.16.0)\n",
+      "Requirement already satisfied: astunparse>=1.6.0 in ./venv/lib/python3.10/site-packages (from tensorflow==2.16.2) (1.6.3)\n",
+      "Requirement already satisfied: typing-extensions>=3.6.6 in ./venv/lib/python3.10/site-packages (from tensorflow==2.16.2) (4.12.2)\n",
+      "Requirement already satisfied: flatbuffers>=23.5.26 in ./venv/lib/python3.10/site-packages (from tensorflow==2.16.2) (24.3.25)\n",
+      "Requirement already satisfied: h5py>=3.10.0 in ./venv/lib/python3.10/site-packages (from tensorflow==2.16.2) (3.11.0)\n",
+      "Requirement already satisfied: protobuf!=4.21.0,!=4.21.1,!=4.21.2,!=4.21.3,!=4.21.4,!=4.21.5,<5.0.0dev,>=3.20.3 in ./venv/lib/python3.10/site-packages (from tensorflow==2.16.2) (4.25.3)\n",
+      "Requirement already satisfied: grpcio<2.0,>=1.24.3 in ./venv/lib/python3.10/site-packages (from tensorflow==2.16.2) (1.64.1)\n",
+      "Requirement already satisfied: absl-py>=1.0.0 in ./venv/lib/python3.10/site-packages (from tensorflow==2.16.2) (2.1.0)\n",
+      "Requirement already satisfied: keras>=3.0.0 in ./venv/lib/python3.10/site-packages (from tensorflow==2.16.2) (3.4.1)\n",
+      "Requirement already satisfied: numpy<2.0.0,>=1.23.5 in ./venv/lib/python3.10/site-packages (from tensorflow==2.16.2) (1.26.4)\n",
+      "Requirement already satisfied: ml-dtypes~=0.3.1 in ./venv/lib/python3.10/site-packages (from tensorflow==2.16.2) (0.3.2)\n",
+      "Requirement already satisfied: requests<3,>=2.21.0 in ./venv/lib/python3.10/site-packages (from tensorflow==2.16.2) (2.32.3)\n",
       "Requirement already satisfied: wheel<1.0,>=0.23.0 in ./venv/lib/python3.10/site-packages (from astunparse>=1.6.0->tensorflow==2.16.2) (0.43.0)\n",
-      "Requirement already satisfied: rich in ./venv/lib/python3.10/site-packages (from keras>=3.0.0->tensorflow==2.16.2) (13.7.1)\n",
       "Requirement already satisfied: optree in ./venv/lib/python3.10/site-packages (from keras>=3.0.0->tensorflow==2.16.2) (0.12.1)\n",
+      "Requirement already satisfied: rich in ./venv/lib/python3.10/site-packages (from keras>=3.0.0->tensorflow==2.16.2) (13.7.1)\n",
       "Requirement already satisfied: namex in ./venv/lib/python3.10/site-packages (from keras>=3.0.0->tensorflow==2.16.2) (0.0.8)\n",
-      "Requirement already satisfied: urllib3<3,>=1.21.1 in ./venv/lib/python3.10/site-packages (from requests<3,>=2.21.0->tensorflow==2.16.2) (2.2.2)\n",
       "Requirement already satisfied: idna<4,>=2.5 in ./venv/lib/python3.10/site-packages (from requests<3,>=2.21.0->tensorflow==2.16.2) (3.7)\n",
       "Requirement already satisfied: certifi>=2017.4.17 in ./venv/lib/python3.10/site-packages (from requests<3,>=2.21.0->tensorflow==2.16.2) (2024.7.4)\n",
       "Requirement already satisfied: charset-normalizer<4,>=2 in ./venv/lib/python3.10/site-packages (from requests<3,>=2.21.0->tensorflow==2.16.2) (3.3.2)\n",
-      "Requirement already satisfied: werkzeug>=1.0.1 in ./venv/lib/python3.10/site-packages (from tensorboard<2.17,>=2.16->tensorflow==2.16.2) (3.0.3)\n",
+      "Requirement already satisfied: urllib3<3,>=1.21.1 in ./venv/lib/python3.10/site-packages (from requests<3,>=2.21.0->tensorflow==2.16.2) (2.2.2)\n",
       "Requirement already satisfied: markdown>=2.6.8 in ./venv/lib/python3.10/site-packages (from tensorboard<2.17,>=2.16->tensorflow==2.16.2) (3.6)\n",
+      "Requirement already satisfied: werkzeug>=1.0.1 in ./venv/lib/python3.10/site-packages (from tensorboard<2.17,>=2.16->tensorflow==2.16.2) (3.0.3)\n",
       "Requirement already satisfied: tensorboard-data-server<0.8.0,>=0.7.0 in ./venv/lib/python3.10/site-packages (from tensorboard<2.17,>=2.16->tensorflow==2.16.2) (0.7.2)\n",
       "Requirement already satisfied: MarkupSafe>=2.1.1 in ./venv/lib/python3.10/site-packages (from werkzeug>=1.0.1->tensorboard<2.17,>=2.16->tensorflow==2.16.2) (2.1.5)\n",
-      "Requirement already satisfied: markdown-it-py>=2.2.0 in ./venv/lib/python3.10/site-packages (from rich->keras>=3.0.0->tensorflow==2.16.2) (3.0.0)\n",
       "Requirement already satisfied: pygments<3.0.0,>=2.13.0 in ./venv/lib/python3.10/site-packages (from rich->keras>=3.0.0->tensorflow==2.16.2) (2.18.0)\n",
+      "Requirement already satisfied: markdown-it-py>=2.2.0 in ./venv/lib/python3.10/site-packages (from rich->keras>=3.0.0->tensorflow==2.16.2) (3.0.0)\n",
       "Requirement already satisfied: mdurl~=0.1 in ./venv/lib/python3.10/site-packages (from markdown-it-py>=2.2.0->rich->keras>=3.0.0->tensorflow==2.16.2) (0.1.2)\n",
       "Note: you may need to restart the kernel to use updated packages.\n"
      ]
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "id": "95ad42ab",
    "metadata": {},
    "outputs": [
@@ -83,7 +83,8 @@
       "tqdm is already installed.\n",
       "pandas is already installed.\n",
       "matplotlib.pyplot is already installed.\n",
-      "seaborn is already installed.\n"
+      "seaborn is already installed.\n",
+      "setuptools is already installed.\n"
      ]
     }
    ],
@@ -110,7 +111,8 @@
     "    \"tqdm\": \"tqdm\",\n",
     "    \"pandas\": \"pandas\",\n",
     "    \"matplotlib\": \"matplotlib.pyplot\",\n",
-    "    \"seaborn\": \"seaborn\"\n",
+    "    \"seaborn\": \"seaborn\",\n",
+    "    \"setuptools\":\"setuptools\"\n",
     "}\n",
     "\n",
     "for package, import_name in packages.items():\n",
@@ -119,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 13,
    "id": "5aab1dc2",
    "metadata": {},
    "outputs": [],
@@ -151,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "id": "de255603",
    "metadata": {},
    "outputs": [],
@@ -185,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "id": "dd23ec18",
    "metadata": {},
    "outputs": [],
@@ -199,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 11,
    "id": "3272226e",
    "metadata": {},
    "outputs": [],
@@ -230,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 19,
    "id": "e00dd863",
    "metadata": {},
    "outputs": [
@@ -390,7 +392,7 @@
        "4             0             0              40            Cuba   <=50K  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -437,7 +439,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "7f3d6346",
    "metadata": {},
    "outputs": [
@@ -459,7 +461,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "2b6a8c46",
    "metadata": {},
    "outputs": [
@@ -493,7 +495,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "a8e3617b",
    "metadata": {},
    "outputs": [
@@ -578,7 +580,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "7bb81037",
    "metadata": {},
    "outputs": [
@@ -683,7 +685,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "4b927e0e",
    "metadata": {},
    "outputs": [
@@ -737,7 +739,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "a6c1c9fd",
    "metadata": {},
    "outputs": [
@@ -768,7 +770,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "1839fca4",
    "metadata": {},
    "outputs": [],
@@ -778,7 +780,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "a94bb12b",
    "metadata": {},
    "outputs": [
@@ -1085,7 +1087,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "id": "ca4cd069",
    "metadata": {},
    "outputs": [
@@ -1121,7 +1123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "id": "91513c70",
    "metadata": {},
    "outputs": [],
@@ -1131,7 +1133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "id": "026ed76e",
    "metadata": {},
    "outputs": [],
@@ -1176,7 +1178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "id": "02c62400",
    "metadata": {},
    "outputs": [],
@@ -1236,7 +1238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "id": "127d9b96",
    "metadata": {},
    "outputs": [],
@@ -1275,7 +1277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "id": "8ccc2ad1",
    "metadata": {},
    "outputs": [],
@@ -1305,7 +1307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "id": "99590236",
    "metadata": {},
    "outputs": [],
@@ -1331,7 +1333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "id": "b80ef34f",
    "metadata": {},
    "outputs": [],
@@ -1367,7 +1369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "id": "21bf9df8",
    "metadata": {},
    "outputs": [
@@ -1889,7 +1891,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "id": "c13f0a0b",
    "metadata": {},
    "outputs": [],
@@ -1909,7 +1911,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "id": "29f5fb77",
    "metadata": {},
    "outputs": [
@@ -2148,7 +2150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "id": "c0943348",
    "metadata": {},
    "outputs": [
@@ -2387,7 +2389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "id": "84fdd1f3",
    "metadata": {},
    "outputs": [
@@ -2626,7 +2628,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "id": "b27c49d7",
    "metadata": {},
    "outputs": [],
@@ -2642,7 +2644,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "id": "41a7ccb8",
    "metadata": {},
    "outputs": [],
@@ -2661,7 +2663,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
    "id": "730540be",
    "metadata": {},
    "outputs": [
@@ -2810,7 +2812,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "id": "c9966b43",
    "metadata": {},
    "outputs": [],
@@ -2828,7 +2830,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": null,
    "id": "f435ef0f",
    "metadata": {},
    "outputs": [
@@ -2876,7 +2878,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": null,
    "id": "b9b725fb",
    "metadata": {},
    "outputs": [],
@@ -2886,7 +2888,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": null,
    "id": "730277fb",
    "metadata": {},
    "outputs": [
